# obsidian-mcp

./: .env.example  .gitignore  AGENT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.explorer  INSTALLATION.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docker.yml
docs/: architecture.md  configuration.md  conventions.md  explorer.md  operations.md  self-maintaining-wiki.md  semantic.md  tools.md  using-with-claude-code.md
obsidian_mcp/: __init__.py  __main__.py  agent_instructions.py  chunker.py  embed_queue.py  embeddings.py  frontmatter.py  groundedness.py  ignore.py  ingest.py  links.py  lint.py  schema.py  semantic.py  server.py  suggest.py  templates.py  vault.py  vector_store.py  watcher.py
obsidian_mcp/explorer/: __init__.py  server.py
obsidian_mcp/explorer/static/: index.html
scripts/: eval_retrieval.py
tests/: conftest.py  test_agent_instructions.py  test_chunker.py  test_embeddings.py  test_frontmatter.py  test_groundedness.py  test_ignore.py  test_ingest.py  test_links.py  test_lint.py  test_retrieval_eval.py  test_schema.py  test_semantic.py  test_suggest.py  test_templates.py  test_vault.py  test_vector_store.py  test_watcher.py
tests/eval/: corpus.py  metrics.py  queries.py
