[project]
name = "obsidian-mcp"
version = "0.3.0"
description = "MCP server for Obsidian vault operations"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "python-frontmatter>=1.1.0",
    "pyyaml>=6.0",
    "watchdog>=4.0",
    "fastembed>=0.3",
    "sqlite-vec>=0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=0.25",
    "ruff>=0.5",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
