[project]
name = "obsidian-mcp"
version = "0.8.1"
description = "MCP server for Obsidian vault operations"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "python-frontmatter>=1.1.0",
    "pyyaml>=6.0",
    "watchdog>=4.0",
    "sqlite-vec>=0.1",
]

[project.optional-dependencies]
fastembed = [
    "fastembed>=0.3",
]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=0.25",
    "ruff>=0.5",
    "pre-commit>=3.7",
    "fastembed>=0.3",
]
explorer = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
]

[tool.setuptools.package-data]
"obsidian_mcp.explorer" = ["static/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
